<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>640</width>
    <height>534</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Picture Viewer</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <widget class="QLabel" name="show_BMP_files">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>640</width>
      <height>480</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>640</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFiles">
    <property name="title">
     <string>Files</string>
    </property>
    <addaction name="actionLoad_BMP_Files"/>
    <addaction name="actionSave_BMP_Image_Using_QImage"/>
    <addaction name="actionSave_BMP_Image_Using_fstream"/>
    <addaction name="actionExit"/>
   </widget>
   <addaction name="menuFiles"/>
  </widget>
  <widget class="QToolBar" name="mainToolBar">
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <action name="actionLoad_BMP_Files">
   <property name="text">
    <string>Load BMP Files</string>
   </property>
  </action>
  <action name="actionExit">
   <property name="text">
    <string>Exit</string>
   </property>
  </action>
  <action name="actionSave_BMP_Image_Using_QImage">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="text">
    <string>Save BMP Image (Using QImage)</string>
   </property>
  </action>
  <action name="actionSave_BMP_Image_Using_fstream">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="text">
    <string>Save BMP Image (Using fstream)</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections>
  <connection>
   <sender>actionExit</sender>
   <signal>triggered()</signal>
   <receiver>MainWindow</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>319</x>
     <y>266</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
